# welding-seam-grinding

./: LICENSE  README.md
src/com_BeltGrinder/: CMakeLists.txt  package.xml
src/com_beltgrinder/: CMakeLists.txt  package.xml
src/com_beltgrinder/include/: com_beltgrinder.h
src/com_beltgrinder/src/: com_beltgrinder.cpp  main.cpp
src/com_plc/: CMakeLists.txt  package.xml
src/com_sensor/: CMakeLists.txt  package.xml
